--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -26,7 +26,7 @@
                                                         <th>Phone</th>
                                                         <th>Address</th>
                                                         <th>Date Reserved</th>
-                                                        <th>Persons</th>
+                                                        <th>No. of Persons</th>
                                                         <th></th>
                                                         <th>Status</th>
                                                         <th width="150px">Buttons</th>
